<resources>
    <string name="app_name">Tally Marker </string>
    <string name="addCat">Add New Category</string>
    <string name="addentry">Add New Entry</string>
    <string name="cat_name">Name</string>
    <string name="cat_desc">Description</string>
    <string name="cat_entry">Name</string>
    <string name="starting_value">Starting Value</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="del">Delete Category</string>
    <string name="swipe_delete">DELETED</string>
    <string name="swipe_undo">UNDO</string>
    <string name="Add">+</string>
    <string name="Sub">-</string>
</resources>
